Fix Header logo section to align with border-box sizing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -50,9 +50,7 @@ nav,
     & > h1,
     & > .h1 {
       margin: 0;
-      padding-bottom: 0.5rem;
       font-size: 2rem;
-      height: 2rem;
       text-transform: uppercase;
       color: white;
     }
